[package]
authors = ['Nokola']
description = "Vector anti-aliased graphics renderer for Android, WebGL, iOS, Windows, Linux, and Mac using miniquad."
edition = '2018'
homepage = "https://github.com/nokola/nonaquad/"
license = "MIT OR Apache-2.0"
name = 'nonaquad'
repository = "https://github.com/nokola/nonaquad/"
version = '0.1.2'
# documentation = "TODO, leave empty for default docs.rs"
categories = ["graphics", "rendering"]
keywords = ["gamedev", "graphics", "antialiased", "UI", "cross-platform"]
readme = "../README.md"

[dependencies]
anyhow = "1.0.26"
glam = {version = "0.17.3", features = ["scalar-math"]}
nona = {path = "../nona", version = "0.1.1"}
slab = "0.4.2"
# note: color-backtrace does not work for wasm32-unknown-unknown due to memmap dependency
# color-backtrace = { version = "0.3" }

[dependencies.miniquad]
# path = '..\miniquad'
version = "0.3.0-alpha.37"
# git = "https://github.com/not-fl3/miniquad"

# Uncomment for small builds
[profile.release]
lto = "thin"

[package.metadata.android]
# Specifies the array of targets to build for.
# Defaults to "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android".
build_targets = ["armv7-linux-androideabi"]
fullscreen = true
opengles_version_major = 2
opengles_version_minor = 0
package_name = "nokola.app.drawaa"

[package.metadata.android.application_attributes]
"android:debuggable" = "true"
"android:hardwareAccelerated" = "true"
